--- a/src/Components/App/App.css
+++ b/src/Components/App/App.css
@@ -50,3 +50,9 @@ h2 {
     flex-direction: column;
   }
 }
+
+@media only screen and (max-width: 500px) {
+  .App {
+    padding: 0 10% 10% 10%;
+  }
+}
