--- a/src/Components/Track/Track.css
+++ b/src/Components/Track/Track.css
@@ -2,6 +2,8 @@
   display: flex;
   align-items: center;
   border-bottom: 1px solid rgba(256, 256, 256, 0.8);
+  position: relative;
+  padding: 1em 0 1em 90px;
 }
 
 .Track-action {
@@ -20,7 +22,7 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
-  height: 72px;
+  margin: 0;
 }
 
 .Track-information h3 {
@@ -31,4 +33,102 @@
   font-size: .83rem;
   font-weight: 300;
   color: rgba(256, 256, 256, 0.8);
+}
+
+.Track-information audio {
+  margin-top: 1em;
+}
+
+.previewMessage {
+  margin-top: 1em;
+}
+
+.TrackPreview,
+.TrackPreview__playButton {
+  align-items: center;
+  position: absolute;
+}
+
+.TrackPreview {
+  display: flex;
+  left: 0;
+  top: 0;
+  bottom: 0;
+  margin: auto;
+}
+
+.TrackPreview:hover > .TrackPreview__playButton {
+  display: flex;
+  cursor: pointer;
+}
+
+.TrackPreview audio {
+  display: none;
+}
+
+.TrackPreview__playButton,
+.TrackPreview img {
+  width: 75px;
+}
+
+.TrackPreview__playButton {
+  height: 75px;
+  justify-content: center;
+  background-color: rgba(58, 69, 75, 0.68);
+  display: none;
+}
+
+.TrackPreview--active .TrackPreview__playButton {
+  display: flex;
+}
+
+.Track__timeIndicator {
+  position: relative;
+  width: 100%;
+  display: flex;
+  margin-top: 0.5em;
+}
+
+.Track__timeIndicator input {
+  width: 50%;
+  margin-right: 1em;
+  background-color: transparent;
+}
+
+.Track__timeIndicator input:focus {
+  outline: none;
+}
+
+.Track__timeIndicator .AudioPlayer__time {
+  margin-top: 0.25em;
+}
+
+.AudioPlayer__range,
+.AudioPlayer__range::-webkit-slider-runnable-track,
+.AudioPlayer__range::-webkit-slider-thumb {
+  -webkit-appearance: none;
+}
+
+.AudioPlayer__range::-webkit-slider-runnable-track {
+  width: 45% !important;
+  height: .5em;
+  background: #828389;
+  border-radius: 8px;
+}
+
+.AudioPlayer__range::-webkit-slider-runnable-track:hover {
+  cursor: pointer;
+}
+
+.AudioPlayer__range::-webkit-slider-thumb {
+  position: relative;
+  height: 1.5em;
+  width: 1.5em;
+  margin-top: -7px;
+  background: white;
+  border-radius: 50%;
+}
+
+.AudioPlayer__range::-webkit-slider-thumb:hover {
+  cursor: grabbing;
 }
