--- a/src/Components/Playlist/Playlist.css
+++ b/src/Components/Playlist/Playlist.css
@@ -10,7 +10,7 @@
   box-shadow: 0 4px 2px 2px #000000;
 }
 
-.Playlist input {
+.Playlist input[type="text"] {
   width: 100%;
   border: 0;
   outline: 0;
@@ -38,8 +38,8 @@
 }
 
 ::-webkit-scrollbar {
-    width: 0px;
-    background: transparent;
+  width: 0px;
+  background: transparent;
 }
 
 @media only screen and (max-width: 1020px) {
